# mugen-neural-ai

./: .gitignore  LICENSE  README-zh.md  README.md  README.zh-CN.md  kfm_moves.csv  main.py  main_collect_data.py  main_train.ipynb  models.py  mugen_database.py  mugen_memory_reader.py  pyproject.toml  windows_api.py
mugen1.1/: Mugen使用说明（强烈建议用chrome浏览器打开）.url
mugen1.1/chars/KFM_CN/: AI.cns  KFM_CN.def  ReadmeAI.txt  common1.cns  kfm.air  kfm.cmd  kfm.cns  readme.txt  性能调查.txt
mugen1.1/chars/backup/kfm/: kfm.ai
mugen1.1/chars/backup/kfm720/: kfm720.ai
mugen1.1/chars/backup/kfm_cn/: common1.cns  common1_AI.cns  kfm.air  kfm.cmd  kfm.cns  kfm_cn.def
mugen1.1/chars/kfm720/: kfm720.ai
mugen1.1/data/: mugen.cfg  readme.txt  select.def  system.def
mugen1.1/data/mugen1/: fight.def  system.def  system.sff
mugen1.1/docs/: mugenfaq.html
tools/SAK-20210705/: Config.cfg
tools/SAK-20210705/Profiles/: profile_1.cfg  profile_1.cfg.bak  profile_1.cfg.qvs
tools_for_ai/MugenWatcher/: read_mugen_hp.py
tools_for_ai/SAK-20210705/Profiles/: profile_1.cfg.bak  profile_1.cfg.qvs
tools_for_ai/SAK-20210705/logs/: log-08-31_00-00-14.txt  log-08-31_00-06-43.txt  log-08-31_00-26-08.txt  log-08-31_16-06-24.txt
utils/: log.py
