[project]
name = "mugen-nerual-ai"
version = "0.1.0"
description = "Mugen Neural AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "numpy>=2.1.2",
    "pydantic>=2.11.7",
    "pymem>=1.14.0",
    "torch-directml>=0.2.5.dev240914",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
